# zephyr

arch/xtensa/include/: xtensa-asm2-s.h
boards/xtensa/mediatek_adsp_mt8195/: Kconfig.board  Kconfig.defconfig  board.cmake  mediatek_adsp_mt8195.dts  mediatek_adsp_mt8195.yaml  mediatek_adsp_mt8195_defconfig
dts/xtensa/mediatek/: mediatek_mt8195.dtsi
include/zephyr/arch/xtensa/: atomic_xtensa.h
samples/subsys/audio/sof/: sample.yaml
soc/xtensa/mediatek_adsp/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc
soc/xtensa/mediatek_adsp/common/: CMakeLists.txt  soc.c
soc/xtensa/mediatek_adsp/common/include/: soc.h
soc/xtensa/mediatek_adsp/common/include/adsp/: cache.h  io.h
soc/xtensa/mediatek_adsp/mt8195/: Kconfig.defconfig.series  Kconfig.series  Kconfig.soc  linker.ld
soc/xtensa/mediatek_adsp/mt8195/include/: _soc_inthandlers.h
soc/xtensa/mediatek_adsp/mt8195/include/soc/: memory.h  platform.h
tests/benchmarks/footprints/src/: footprint.h
